--- a/css/index.css
+++ b/css/index.css
@@ -13,10 +13,13 @@ body {
 
 
 h1, h2, h3, h4, h5, h6, p {
-    margin: 15px;
+    margin: 20px;
+    color: var(--main-font-color);
+    font-family: 'Gabriela', serif;
 }
 
 header nav .logo {
+    margin: 20px;
     font-family: 'Gabriela', serif;
     font-size: 2.5rem;
     text-align: center;
@@ -27,12 +30,14 @@ header nav .menu {
     display: flex;
 }
 
+
 header nav .menu li {
     list-style-type: none;
 }
 
 header nav .menu {
-    padding: 15px;
+    margin-top: 20px;
+    padding: 20px;
     justify-content: space-around;
 }
 
@@ -47,7 +52,7 @@ header nav .menu a:hover {
     text-decoration: underline;
 }
 
-@media (min-width: 480px) {
+@media (min-width: 660px) {
     header nav {
         display: flex;
 }
@@ -62,4 +67,16 @@ header nav .menu a:hover {
     background-position: center;
     min-height: 500px;
 }
+ .text {
+    font-family: 'Play', serif;
+    font-size: 1.5rem;
+    text-align: left;
+    color: var(--main-font-color);
 }
+ .clock {
+    font-family: 'Play', serif;
+    font-size: 1.5rem;
+    text-align: right;
+    margin-right: 20px;
+    color: var(--main-font-color);
+ }
