Created initial markup

--- a/css/index.css
+++ b/css/index.css
@@ -80,3 +80,6 @@ header nav .menu a:hover {
     margin-right: 20px;
     color: var(--main-font-color);
  }
+ .container{
+     background-color: #cbe8ba
+ }
