Created initial markup

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Gabriela|Play&subset=cyrillic');
 
-:root{
+:root {
     font-family: "Play", sans-serif;
     --main-font-color: #0a7a5a;
     background-color: #cbe8ba;
@@ -12,8 +12,8 @@ body {
 }
 
 
-h1, h2, h3, h4, h5, h6, p {
-    margin: 20px;
+h1,h2,h3,h4,h5,h6,p {
+    margin: 30px;
     color: var(--main-font-color);
     font-family: 'Gabriela', serif;
 }
@@ -55,31 +55,168 @@ header nav .menu a:hover {
 @media (min-width: 660px) {
     header nav {
         display: flex;
-}
-        
-         header nav .menu {
-        flex: 1;    
     }
-    
+
+    header nav .menu {
+        flex: 1;
+    }
+
     header .banner {
-    background-image: url(../img/interior.jpg);
-    background-size: cover;
-    background-position: center;
-    min-height: 500px;
+        background-image: url(../img/interior.jpg);
+        background-size: cover;
+        background-position: center;
+        min-height: 500px;
+    }
+    .text {
+        font-family: 'Play', serif;
+        font-size: 1.5rem;
+        text-align: center;
+        color: var(--main-font-color);
+    }
+    .container {
+        background-color: #cbe8ba;
+        margin:auto;
+    }
+    #contact {
+        padding: 10px 0 10px;
+        
+    }
+
+    .contact-text {
+        margin: 45px auto;
+    }
+
+    .mail-message-area {
+        width: 100%;
+        padding: 15px;
+    }
+
+    .mail-message {
+        width: 100%;
+        background: rgba(255, 255, 255, 0.8) !important;
+        -webkit-transition: all 0.7s;
+        -moz-transition: all 0.7s;
+        transition: all 0.7s;
+        margin: 0 auto;
+        border-radius: 0;
+    }
+
+    .not-visible-message {
+        height: 0px;
+        opacity: 0;
+    }
+
+    .visible-message {
+        height: auto;
+        opacity: 1;
+        margin: 25px auto 0;
+    }
+
+    /* Input Styles */
+    .form {
+        width: 100%;
+        padding: 15px;
+        background: #f8f8f8;
+        border: 1px solid rgba(0, 0, 0, 0.075);
+        margin-bottom: 25px;
+        color: #727272 !important;
+        font-size: 13px;
+        -webkit-transition: all 0.4s;
+        -moz-transition: all 0.4s;
+        transition: all 0.4s;
+    }
+
+    .form:hover {
+        border: 1px solid #8BC3A3;
+    }
+
+    .form:focus {
+        color: white;
+        outline: none;
+        border: 1px solid #8BC3A3;
+    }
+
+    .textarea {
+        height: 200px;
+        max-height: 200px;
+        max-width: 100%;
+    }
+
+    /* Generic Button Styles */
+    .button {
+        padding: 8px 12px;
+        background: #0A5175;
+        display: block;
+        width: 120px;
+        margin: 10px 0 0px 0;
+        border-radius: 3px;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        transition: all 0.3s;
+        text-align: center;
+        font-size: 0.8em;
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.10);
+        -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.10);
+        -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.10);
+    }
+
+    .button:hover {
+        background: #8BC3A3;
+        color: white;
+    }
+
+    /* Send Button Styles */
+    .form-btn {
+        width: 180px;
+        display: block;
+        height: auto;
+        padding: 15px;
+        color: #fff;
+        background: #8BC3A3;
+        border: none;
+        border-radius: 3px;
+        outline: none;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        transition: all 0.3s;
+        margin: auto;
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.10);
+        -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.10);
+        -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.10);
+    }
+
+    .form-btn:hover {
+        background: #111;
+        color: white;
+        border: none;
+    }
+
+    .form-btn:active {
+        opacity: 0.9;
+    }
+    center {
+        margin-top: 330px;
+    }
+    input {
+        position: relative;
+        z-index: 9999;
+    }
+
+    label {
+        margin: 10px;
+        color: var(--main-font-color);
+        font-family: 'Gabriela', serif;
+    }
+
+    img {
+        border-radius: 8px;
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    h2{
+        text-align: center;
+    }
 }
- .text {
-    font-family: 'Play', serif;
-    font-size: 1.5rem;
-    text-align: left;
-    color: var(--main-font-color);
-}
- .clock {
-    font-family: 'Play', serif;
-    font-size: 1.5rem;
-    text-align: right;
-    margin-right: 20px;
-    color: var(--main-font-color);
- }
- .container{
-     background-color: #cbe8ba
- }
